Fix toolbar z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@ app-toolbar {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .app-wrapper {
